other-app/iam-app/main/default/objects/DocuSign_JWT_Config_mdt__mdt/DocuSign_JWT_Config_mdt__mdt.object-meta.xml
<CustomObject>
    <description>DocuSign JWT認証設定</description>
    <label>DocuSign JWT Config</label>
    <pluralLabel>DocuSign JWT Configs</pluralLabel>
</CustomObject>