other-app/iam-app/main/default/objects/DocuSign_JWT_Config_mdt__mdt/fields/Auth_Server__c.field-meta.xml
<CustomField>
    <fullName>Auth_Server__c</fullName>
    <label>Auth Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>