other-app/iam-app/main/default/objects/DocuSign_JWT_Config_mdt__mdt/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>